final touch with 69.7 code coverge